fix cosas y se añade endpoint para obtener libros por correo